syntax = "proto3";

option csharp_namespace = "ChatServer.Protos";

package chatgrpc;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message RoomRegistrationRequest {
	string room_name = 1;
	string user_name = 2; 
}

message RoomRegistrationResponse {
	bool joined_room = 1;
}


message ChatMessage {
	google.protobuf.Timestamp msg_time = 1 ;
	string content = 2 ;
	string user_name = 3 ;
	string room_name = 4; 
}

service ChatGrpcService {
	rpc RegisterToRoom(RoomRegistrationRequest) returns (RoomRegistrationResponse);
	rpc StartChatting(stream ChatMessage) returns (stream ChatMessage);
}
